WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133835
[iOS] Fix the view being half offscreen in WebKitTestRunner on iOS
https://bugs.webkit.org/show_bug.cgi?id=133835
Summary
[iOS] Fix the view being half offscreen in WebKitTestRunner on iOS
Simon Fraser (smfr)
Reported
2014-06-12 17:52:37 PDT
[iOS] Fix the view being half offscrene in WebKitTestRunner on iOS
Attachments
Patch
(2.07 KB, patch)
2014-06-12 17:53 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-06-12 17:53:29 PDT
Created
attachment 233011
[details]
Patch
Tim Horton
Comment 2
2014-06-12 17:55:07 PDT
Comment on
attachment 233011
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=233011&action=review
> Tools/ChangeLog:3 > + [iOS] Fix the view being half offscrene in WebKitTestRunner on iOS
offscreen
Simon Fraser (smfr)
Comment 3
2014-06-13 22:36:07 PDT
http://trac.webkit.org/changeset/169925
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug