[iOS] Fix the view being half offscreen in WebKitTestRunner on iOS https://bugs.webkit.org/show_bug.cgi?id=133835

Reviewed by Tim Horton.

Don't do the _fakeOrigin stuff when -initWithFrame: is calling -setFrame:

* WebKitTestRunner/ios/PlatformWebViewIOS.mm:
(-[WebKitTestRunnerWindow initWithFrame:]):
(-[WebKitTestRunnerWindow setFrame:]):

Canonical link: https://commits.webkit.org/151803@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169925 268f45cc-cd09-0410-ab3c-d52691b4dbfc